@@ -1,6 +1,10 @@
 1.0.0-rc2
 ====================
 
+ * Fixed error in config loader code. The loader must stop after the first
+   conf file is loaded or the conf file is overwritten by the default file.
+   [panjunyong]
+
  * Add optional arguments to ATTopic.queryCatalog to make it compatible with
    getFolderContents (optional batching, return full objects instead of
    brains).  Make the album_view compatible with Smart Folders.
